# Autonomous

./: .gitignore  .python-version  README.md  explain  findFocalLength.py  main.py  new_main.py  pyproject.toml
.github/workflows/: ci.yml
Notes/: codebase_tips.md
examples/: ar.py  location.py  map.py  wheels.py
libs/: ARTracker.py  Drive.py  Location.py  Locationf9p.py  UDPOut.py  args.py  aruco_tracker.py  communication.py  config.py  coordinate.py  drive.py  gps_controller.py  location.py  navigation.py  rover.py
src/: findFocalLength.py  main.py  setup.py
src/RoverMap/: extremeTraversal.py  server.py
src/RoverMap/RoverMapTileGenerator/: generate_tiles.py
src/RoverMap/example/: simpleExample.py
src/libs/: ARTracker.py  Drive.py  Location.py  Locationf9p.py  UDPOut.py
tools/: list_cameras.py
