[project]
name = "autonomous"
version = "1.1"
description = "The autonomous libraries"
authors = [{ name = "Reza", email = "soonerrover@ou.edu" }]
dependencies = ["opencv-contrib-python==4.6.0.66", "flask>=2.3.2"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true
members = ["examples", "gps", "libs", "yolo", "RoverMap"]
[tool.hatch.build.targets.wheel]

packages = ["dummy"]
