[project]
name = "autonomous"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Barrett", email = "contact@barretts.club" }]
dependencies = [
    "opencv-python>=4.7",
    "flask>=3.0.3",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.10"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.8.0", "ruff>=0.2.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["./"]
